@@ -1,3 +1,8 @@
+2007-09-23  Dalibor Topic  <robilad@kaffe.org>
+
+	* kaffe/kaffevm/code.c (addLineNumbers): Fixed formatting string
+	warnings on x86_64-linux.
+
 2007-09-22  Dalibor Topic  <robilad@kaffe.org>
 
 	* kaffe/kaffevm/exception.c (discardErrorInfo): 
